--- a/main project/index.html
+++ b/main project/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_MAP_KEY%&libraries=services"></script>
+    <!-- 카카오맵 API -->
+    <script
+      type="text/javascript"
+      src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_API_KEY%&libraries=services"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
